[package]
name = "xr-ik-mirror"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_oxr = { git = "https://github.com/awtterpip/bevy_oxr", rev = "d9ebd5bf0cb883034d88b19eca8d744aa089afb5", features = ["linked"] }
color-eyre.workspace = true
bevy_mod_inverse_kinematics = { git = "https://github.com/MalekiRe/bevy_mod_inverse_kinematics"}